bouton echap pour fermer les modals, enlever console.log, mettre le focus directement sur les modals, correction z-index formumaire

--- a/css/photograph.scss
+++ b/css/photograph.scss
@@ -287,6 +287,7 @@
     right: 0;
     left: 0;
     display: none;
+    z-index: 20;
 }
 
 .contact-button {
